samples/_failures_safe/1761633610_36a2a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16cc7524.c: In function ‘main’:
./samples/SAFE/__tmp_16cc7524.c:134:12: error: missing terminating " character
  134 |     printf("========================
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_16cc7524.c:134:5: error: expected expression at end of input
  134 |     printf("========================
      |     ^~~~~~
./samples/SAFE/__tmp_16cc7524.c:134:5: error: expected declaration or statement at end of input
